Fix #2343 "RTE overflows to the right if on subsequent wizard page"
- debugged under Chrome
- seems related to hidden cases absolutely positioned off-page
- nested off-page `<div>` elements had very large width (just short of 10,000)
- unclear whether this is changed behavior in Chrome at some point, but possible
- TinyMCE was using those widths correctly
- this also relies on fix for #2344
- also update fr:wizard switch and fr:tinymce group to use `<div>`

--- a/src/resources-packaged/config/theme/xforms.css
+++ b/src/resources-packaged/config/theme/xforms.css
@@ -63,6 +63,13 @@
 .orbeon .xforms-case-selected {
   position: static;
 }
+.orbeon div.xforms-case-deselected,
+.orbeon div.xforms-case-selected {
+  width: 100%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 .orbeon .xforms-hint {
   display: none;
 }
@@ -92,6 +99,8 @@
 }
 .orbeon .popover.xforms-help-popover .popover-content {
   overflow: auto;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   white-space: pre-wrap;
 }
